--- a/configuration_files/conf.toml
+++ b/configuration_files/conf.toml
@@ -3,6 +3,7 @@
     neuron_type = 0
     execution_obj = 0
     n_process = 1
+    cuda = 0
     learn = 1
 
 [simulation]
@@ -16,20 +17,20 @@
     epochs = 1
 
 [output]
-    generated_spikes = "./networks/toml_format/generated_spikes_500_reordered.txt"
-    final_weights = "./networks/toml_format/final_weights_500_reordered.txt"
-    execution_times = "./networks/toml_format/execution_times_500_reordered.txt"
-    spikes_per_neuron = "./networks/toml_format/spikes_per_neuron_500_reordered.txt"
+    generated_spikes = "./networks/toml_format/generated_spikes_network8784_lc_reordered.txt"
+    execution_times = "./networks/toml_format/execution_times_network8784_lc_reordered.txt"
+    spikes_per_neuron = "./networks/toml_format/spikes_per_neuron_network8784_lc_reordered.txt"
     store_network = 1
     store_network_file = "./networks/toml_format/network_after_training.txt"
 
 [network]
-    network_file = "./Network_generator/network500.toml"
-    network_neurons_file = "./Network_generator/network500_neurons.toml"
-    network_synapses_file = "./Network_generator/network500_synapses.toml"
+    network_file = "./configuration_files/networks/network8784_lc.toml"
+    network_neurons_file = "./configuration_files/networks/network8784_neurons_lc.toml"
+    network_synapses_file = "./configuration_files/networks/network8784_synapses_lc.toml"
     behaviours = 1
     delays = 1
     weights = 1
     training_zones = 1
     thresh = 1
+    v_rests = 1;
     t_refract = 1
